# granular_marshal

./: .gitignore  .ocamlformat  README.md  dune  granular_marshal.ml  granular_marshal.mli  map_granular.ml  map_granular2.ml  test.sh  test_granular.ml  test_granular_dag.ml  test_granular_dag_map.ml  test_granular_dag_map2.ml  test_marshal.ml
